syntax = "proto3";

// option java_multiple_files = true;
option java_package = "io.loremipsum.grpc.demo.proto";

package greeter;



service GreeterBlocking {
    rpc SayHello (HelloRequest) returns (HelloReply);
}


message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}